# OurCraft

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LEGAL.md  LICENSE  OurCraft.sln  README.md  VISION.md
Client/: Client.vcxproj  Client.vcxproj.filters  Extrax64Stubs.cpp  MinecraftServer.cpp  MinecraftServer.h  OurCraft.cpp  OurCraft.h  ReadMe.txt  glWrapper.cpp  stdafx.h  stubs.cpp
Client/Common/: App_Defines.h  App_enums.h  App_structs.h  C4JMemoryPoolAllocator.h  Console_Awards_enum.h  Console_Utils.cpp  Consoles_App.cpp  Consoles_App.h  ShutdownManager.h
Client/Data/: README.md
Client/Game/: Chunk.cpp  Chunk.h  CreativeMode.cpp  DemoLevel.cpp  DemoLevel.h  DemoMode.cpp  DerivedServerLevel.cpp  DerivedServerLevel.h  EntityTracker.cpp  EntityTracker.h  GameMode.cpp  LocalPlayer.cpp  LocalPlayer.h  MemoryTracker.cpp  ModReceiver.cpp  ModReceiver.h  MultiPlayerGameMode.cpp  MultiPlayerLevel.cpp  MultiPlayerLevel.h  MultiPlayerLocalPlayer.cpp  MultiPlayerLocalPlayer.h  Options.cpp  Options.h  RemotePlayer.cpp  RemotePlayer.h  ServerLevel.cpp  ServerLevel.h  ServerLevelListener.cpp  ServerLevelListener.h  ServerPlayer.cpp  ServerPlayer.h  ServerPlayerGameMode.cpp  ServerPlayerGameMode.h  Settings.cpp  StatsCounter.cpp  SurvivalMode.cpp  TeleportCommand.cpp  TeleportCommand.h  Timer.cpp  User.cpp
Client/Input/: ConsoleInputSource.h  Input.cpp  KeyboardMouseInput.cpp  KeyboardMouseInput.h  KeyboardMousePlayerInput.cpp  KeyboardMousePlayerInput.h
Client/Mobs/: ArrowRenderer.cpp  BlazeModel.cpp  BlazeRenderer.cpp  BoatRenderer.cpp  BookModel.cpp  ChestRenderer.cpp  ChickenModel.cpp  ChickenRenderer.cpp  CreeperModel.cpp  CreeperRenderer.cpp  DefaultRenderer.cpp  DragonModel.cpp  EnchantTableRenderer.cpp  EnderChestRenderer.cpp  EnderCrystalRenderer.cpp  EnderDragonRenderer.cpp  EndermanRenderer.cpp  EntityRenderDispatcher.cpp  EntityRenderDispatcher.h  EntityRenderer.cpp  EntityRenderer.h  EntityTileRenderer.cpp  ExperienceOrbRenderer.cpp  FallingTileRenderer.cpp  FireballRenderer.cpp  FishingHookRenderer.cpp  GhastModel.cpp  GhastRenderer.cpp  HumanoidMobRenderer.cpp  HumanoidModel.cpp  ItemFrameRenderer.cpp  LavaSlimeModel.cpp  LavaSlimeRenderer.cpp  LightningBoltRenderer.cpp  MinecartRenderer.cpp  MobRenderer.cpp  MobSpawnerRenderer.cpp  Model.cpp  Model.h  ModelPart.cpp  (+41 more)
Client/ModLoader/: ModAPIImpl.cpp  ModAPIImpl.h  ModLoader.cpp  ModLoader.h
Client/Network/: ClientConnection.cpp  ClientConnection.h  ClientConstants.cpp  MultiPlayerChunkCache.cpp  MultiPlayerChunkCache.h  PendingConnection.cpp  PendingConnection.h  PlayerChunkMap.cpp  PlayerChunkMap.h  PlayerConnection.cpp  PlayerConnection.h  PlayerList.cpp  PlayerList.h  ServerChunkCache.cpp  ServerChunkCache.h  ServerCommandDispatcher.cpp  ServerCommandDispatcher.h  ServerConnection.cpp  ServerConnection.h  ServerInterface.h
Client/Particles/: BreakingItemParticle.cpp  BubbleParticle.cpp  CritParticle.cpp  CritParticle2.cpp  DragonBreathParticle.cpp  DripParticle.cpp  EchantmentTableParticle.cpp  EnderParticle.cpp  ExplodeParticle.cpp  FlameParticle.cpp  FootstepParticle.cpp  GuiParticle.cpp  GuiParticles.cpp  GuiParticles.h  HugeExplosionParticle.cpp  HugeExplosionSeedParticle.cpp  LavaParticle.cpp  NetherPortalParticle.cpp  NoteParticle.cpp  Particle.cpp  Particle.h  ParticleEngine.cpp  PlayerCloudParticle.cpp  RedDustParticle.cpp  SmokeParticle.cpp  SnowShovelParticle.cpp  SpellParticle.cpp  SuspendedParticle.cpp  SuspendedTownParticle.cpp  TakeAnimationParticle.cpp  TerrainParticle.cpp  WaterDropParticle.cpp
Client/Platform/: AnvilOverlay.cpp  AnvilOverlay.h  BeaconOverlay.cpp  BeaconOverlay.h  BedrockUIParser.cpp  BedrockUIParser.h  BgfxRenderer.cpp  BgfxRenderer.h  BgfxRendererFwd.h  BinkAudioDecoder.cpp  BinkAudioDecoder.h  BrewingOverlay.cpp  BrewingOverlay.h  CartographyOverlay.cpp  CartographyOverlay.h  ChatOverlay.cpp  ChatOverlay.h  ChestOverlay.cpp  ChestOverlay.h  ContainerOverlay.cpp  ContainerOverlay.h  CraftingOverlay.cpp  CraftingOverlay.h  CreativeOverlay.cpp  CreativeOverlay.h  DispenserOverlay.cpp  DispenserOverlay.h  EmscriptenMain.cpp  EmscriptenStorage.cpp  EmscriptenStorage.h  EmscriptenWebSocket.cpp  EmscriptenWebSocket.h  EnchantingOverlay.cpp  EnchantingOverlay.h  FabricatorOverlay.cpp  FabricatorOverlay.h  FurnaceOverlay.cpp  FurnaceOverlay.h  GrindstoneOverlay.cpp  GrindstoneOverlay.h  (+44 more)
Client/Render/: Camera.cpp  Camera.h  Cube.cpp  Cube.h  Culler.h  DirtyChunkSorter.cpp  DistanceChunkSorter.cpp  Frustum.cpp  FrustumCuller.h  FrustumData.h  GameRenderer.cpp  GameRenderer.h  ItemInHandRenderer.cpp  ItemRenderer.cpp  ItemRenderer.h  ItemSpriteRenderer.cpp  ItemSpriteRenderer.h  LevelRenderer.cpp  LevelRenderer.h  Lighting.cpp  Minimap.cpp  Minimap.h  OffsettedRenderList.cpp  Polygon.h  ProgressRenderer.cpp  ProgressRenderer.h  Tesselator.cpp  Textures.cpp  Textures.h  TrackedEntity.cpp  TrackedEntity.h  Vertex.h  ViewportCuller.cpp  ViewportCuller.h
Client/Screens/: AbstractContainerScreen.cpp  AchievementScreen.cpp  AchievementScreen.h  ChatScreen.cpp  ConfirmScreen.cpp  ConnectScreen.cpp  ContainerScreen.cpp  ControlsScreen.cpp  CraftingScreen.cpp  CreateWorldScreen.cpp  DeathScreen.cpp  DisconnectedScreen.cpp  FurnaceScreen.cpp  InBedChatScreen.cpp  InventoryScreen.cpp  JoinMultiplayerScreen.cpp  NameEntryScreen.cpp  OptionsScreen.cpp  PauseScreen.cpp  ReceivingLevelScreen.cpp  RenameWorldScreen.cpp  Screen.cpp  Screen.h  SelectWorldScreen.cpp  SelectWorldScreen.h  StatsScreen.cpp  StatsScreen.h  TextEditScreen.cpp  TitleScreen.cpp  TrapScreen.cpp  (+2 more)
Core/: Core.vcxproj  Core.vcxproj.filters  MinecraftServer.cpp  MinecraftServer.h  stdafx.h
ExternalDependency/: README.md
Launcher/: Launcher.vcxproj  Launcher.vcxproj.filters  main.cpp
ModAPI/: ModAPI.h  ModEvents.h  ModTypes.h
Server/: CryptoUtils.h  ModDistributor.cpp  ResourcePackConverter.cpp  ResourcePackConverter.h  Server.vcxproj  ServerConfig.cpp  ServerData.cpp  ServerData.h  main.cpp  server.properties  server_output.txt  stdafx.h
World/: Minecraft.World.cpp  World.vcxproj  World.vcxproj.filters  stdafx.h
(+1132 files in other folders)
